# project-maps

./: .editorconfig  .env.example  .gitignore  .tool-versions  Makefile  README.md  biome.json  brew_requirements.txt  docker-compose.yml  eslint.config.mts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.devcontainer/: Dockerfile  FLATPAK.md  devcontainer.json  docker-compose.yml  envoy.yaml  nginx.conf  supervisord.conf
.devcontainer/scripts/: post-create.sh  post-start.sh
.github/workflows/: create-recursion-matrix.yml  devcontainer-prebuild.yml  devcontainer.yml  rerun.yml  vector-tiles-depth-0.yml  vector-tiles-depth-1.yml  vector-tiles-depth-2.yml  vector-tiles-depth-3.yml  vector-tiles-merge.yml  vector-tiles-recursive.yml  vector-tiles-single-manual.yml  vector-tiles-single.yml  vector-tiles.yml
.husky/: pre-commit
.moon/: toolchain.yml  workspace.yml
.moon/tasks/: node.yml
apps/backend/: .env.example  moon.yml  package.json  tsconfig.json
apps/backend/src/: config.ts  index.ts  main.ts  types.ts
apps/frontend/: .env.example  .gitignore  README.md  moon.yml  package.json  postcss.config.mjs  quasar.config.ts
apps/location-images/: .env.example  moon.yml  package.json  tsconfig.json
apps/location-metadata/: .env.example  moon.yml  package.json
apps/metadata/: .env.example  .gitignore  moon.yml  package.json
apps/overpass/: .env.example  docker-compose.yml  moon.yml  package.json
apps/overpass-interpreter/: .env.example  docker-compose.yml  moon.yml  package.json
apps/search/: moon.yml  package.json  types.d.ts
(+345 files in other folders)
